unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/Call_Assigned_to_Driver_Event__e.object-meta.xml
<CustomObject>
    <description>Call Assigned to Driver Platform Event</description>
    <label>Call Assigned to Driver Event</label>
    <pluralLabel>Call Assigned to Driver Event</pluralLabel>
</CustomObject>