unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/AutoAssigned__c.field-meta.xml
<CustomField>
    <fullName>AutoAssigned__c</fullName>
    <label>AutoAssigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>