unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <description>This is call date on the work order mapping</description>
    <label>Call Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>