unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/DriverID_text__c.field-meta.xml
<CustomField>
    <fullName>DriverID_text__c</fullName>
    <label>DriverID_text</label>
    <length>60</length>
    <type>Text</type>
</CustomField>