unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/DriverName__c.field-meta.xml
<CustomField>
    <fullName>DriverName__c</fullName>
    <label>DriverName</label>
    <length>60</length>
    <type>Text</type>
</CustomField>