unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>EventType</label>
    <length>60</length>
    <type>Text</type>
</CustomField>