unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/FacilityID__c.field-meta.xml
<CustomField>
    <fullName>FacilityID__c</fullName>
    <label>FacilityID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>