unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <description>This is the decline reason code</description>
    <label>Reason Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>