unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/SA__c.field-meta.xml
<CustomField>
    <fullName>SA__c</fullName>
    <description>This is service appointment number to be mapped to the More field in ODS.</description>
    <label>Service Appointment #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>