unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/SA_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>SA_Call_Id__c</fullName>
    <label>SA Call Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>