unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/SA_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>SA_Creation_Date__c</fullName>
    <label>SA Creation Date</label>
    <type>Date</type>
</CustomField>