unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/SA_Work_Acceptance_Status__c.field-meta.xml
<CustomField>
    <fullName>SA_Work_Acceptance_Status__c</fullName>
    <label>SA Work Acceptance Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>