unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>StatusCode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>