unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/TruckID__c.field-meta.xml
<CustomField>
    <fullName>TruckID__c</fullName>
    <label>TruckID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>