unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/UpdateCode__c.field-meta.xml
<CustomField>
    <fullName>UpdateCode__c</fullName>
    <label>UpdateCode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>