unpackaged/main/default/objects/Call_Assigned_to_Driver_Event__e/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>